@@ -11,6 +11,11 @@ Runtime Behavior Changes:
   * util-core: Standardized argument checking in implementations of
     `c.t.io.Buf.write` and `c.t.io.Buf.slice`. ``RB_ID=899935``
 
+API Changes:
+
+  * util-core: Deprecated `c.t.io.ConcatBuf` which is replaced by
+    `c.t.io.Buf.apply(IndexedSeq[Buf])`. ``RB_ID=899623``
+
 6.40.0  2016-12-20
 
 Bug Fixes:
